# LowPassFilter

./: .gitignore  CMakeLists.txt  LowPassFilter.cpp  README.md  main.cpp  test.cpp
src/: Butterworth.cpp  Butterworth.h  ILowPassFilter.h  LowPassFilter.cpp  LowPassFilter.h  MovingAverage.cpp  MovingAverage.h
tests/: test_LowPassFilter.cpp
